--- a/src/app/emp-add-edit/emp-add-edit.component.html
+++ b/src/app/emp-add-edit/emp-add-edit.component.html
@@ -1,46 +1,66 @@
 <div mat-dialog-title>
   <h1>Adicionar</h1>
 </div>
-<div mat-dialog-content>
-  <div class="row">
-    <mat-form-field appearance="fill">
-      <mat-label>Primeiro nome</mat-label>
-      <input matInput type="text" />
-    </mat-form-field>
-    <mat-form-field appearance="fill">
-      <mat-label>Ultimo nome</mat-label>
-      <input matInput type="text" />
-    </mat-form-field>
+
+<form [formGroup]="empForm" (ngSubmit)="onFormSubmit()">
+  <div mat-dialog-content>
+    <div class="row">
+      <mat-form-field appearance="fill">
+        <mat-label>Primeiro nome</mat-label>
+        <input matInput type="text" formControlName="firstName" />
+      </mat-form-field>
+      <mat-form-field appearance="fill">
+        <mat-label>Ultimo nome</mat-label>
+        <input matInput type="text" formControlName="lastName" />
+      </mat-form-field>
+    </div>
+
+    <div class="row">
+      <mat-form-field appearance="fill">
+        <mat-label>Email</mat-label>
+        <input matInput type="text" formControlName="email" />
+      </mat-form-field>
+      <mat-form-field appearance="fill">
+        <mat-label>Data de nascimento</mat-label>
+        <input matInput [matDatepicker]="picker" formControlName="dob" />
+        <mat-hint>MM/DD/YYYY</mat-hint>
+        <mat-datepicker-toggle
+          matIconSuffix
+          [for]="picker"
+        ></mat-datepicker-toggle>
+        <mat-datepicker #picker></mat-datepicker>
+      </mat-form-field>
+    </div>
+
+    <div class="row">
+      <mat-radio-group aria-label="Select an option" formControlName="genrer">
+        <mat-label>
+          <b>Gênero</b>
+        </mat-label>
+        <mat-radio-button value="1">Homen</mat-radio-button>
+        <mat-radio-button value="2">Mulher</mat-radio-button>
+        <mat-radio-button value="3">Outros</mat-radio-button>
+      </mat-radio-group>
+    </div>
+
+    <div class="row">
+      <mat-form-field appearance="fill">
+        <mat-label>Nivel de educação </mat-label>
+        <mat-select formControlName="education">
+          <mat-option *ngFor="let val of education" [value]="val">
+            {{ val }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+      <mat-form-field appearance="fill">
+        <mat-label>Experiência</mat-label>
+        <input matInput type="number" formControlName="experience" />
+      </mat-form-field>
+    </div>
   </div>
 
-  <div class="row">
-    <mat-form-field appearance="fill">
-      <mat-label>Email</mat-label>
-      <input matInput type="text" />
-    </mat-form-field>
-    <mat-form-field appearance="fill">
-      <mat-label>Choose a date</mat-label>
-      <input matInput [matDatepicker]="picker" />
-      <mat-hint>MM/DD/YYYY</mat-hint>
-      <mat-datepicker-toggle
-        matIconSuffix
-        [for]="picker"
-      ></mat-datepicker-toggle>
-      <mat-datepicker #picker></mat-datepicker>
-    </mat-form-field>
+  <div mat-dialog-actions class="action">
+    <button mat-raised-button color="warn">Cancelar</button>
+    <button mat-raised-button color="primary" type="submit">Salvar</button>
   </div>
-
-  <div class="row">
-    <mat-radio-group aria-label="Select an option">
-      <mat-label>
-        <b>Gênero</b>
-      </mat-label>
-      <mat-radio-button value="1">Homen</mat-radio-button>
-      <mat-radio-button value="2">Mulher</mat-radio-button>
-    </mat-radio-group>
-  </div>
-</div>
-<div mat-dialog-actions>
-  <button mat-raised-button color="warn">Cancelar</button>
-  <button mat-raised-button color="primary">Salvar</button>
-</div>
+</form>
