--- a/src/app/emp-add-edit/emp-add-edit.component.html
+++ b/src/app/emp-add-edit/emp-add-edit.component.html
@@ -37,9 +37,9 @@
         <mat-label>
           <b>Gênero</b>
         </mat-label>
-        <mat-radio-button value="1">Homen</mat-radio-button>
-        <mat-radio-button value="2">Mulher</mat-radio-button>
-        <mat-radio-button value="3">Outros</mat-radio-button>
+        <mat-radio-button value="Homen">Homen</mat-radio-button>
+        <mat-radio-button value="Mulher">Mulher</mat-radio-button>
+        <mat-radio-button value="Outro">Outros</mat-radio-button>
       </mat-radio-group>
     </div>
 
