--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,28 @@
+@media (min-width: 740px){
+  .table-container{
+    max-width: 90%;
+    margin-inline: auto;
+  }
+}
+
+
 .example-spacer {
   flex: 1 1 auto;
 }
+
+.table-container{
+  width: 100%;
+  overflow-x: scroll;
+  margin-top: 2rem;
+}
+
+.search{
+  width: 90%;
+  margin-inline: auto;
+  margin-top: 10vh;
+
+  mat-form-field{
+    width: 100%;
+  }
+}
+
